[project]
name = "email-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "causalml>=0.15.3",
    "eli5>=0.16.0",
    "imbalanced-learn>=0.13.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "xgboost>=3.0.0",
]
